--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: dunesage.github.io
+title: Final Project: CPU features and How it Relates to the CPU Performance Speeds
 description: 
 logo:
 show_downloads: true
