--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Final Project: CPU features and How it Relates to the CPU Performance Speeds
-description: 
-logo:
+title: "Final Project: CPU Features and How it Relates to the CPU Performance Speeds"
+description: ""
+logo: ""
 show_downloads: true
 future: true
 
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: "pages-themes/cayman@v0.2.0"
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
